test/corpus/delete_statement.txt
=================================================
DELETE Statement Simple
=================================================
DELETE FOO.BAR.BAAZ
WHERE  DATEDIFF(MINUTE, cachedate, GETDATE()) >= 29
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (delete_statement
          (delete_statement_from
            (ddl_object
              (full_table_name
                (id_)
                (id_)
                (id_))))
          (search_condition
            (predicate
              (expression
                (function_call
                  (built_in_functions
                    (datediff_)
                    (dateparts_12
                      (dateparts_9
                        (minute_)))
                    (expression
                      (full_column_name
                        (id_)))
                    (expression
                      (function_call
                        (scalar_function_name
                          (func_proc_name_database_schema
                            (func_proc_name_schema
                              (id_)))))))))
              (comparrison_operator)
              (expression
                (primitive_expression
                  (primitive_constant
                    (decimal_)))))))))))
