test/corpus/primitive_expression.txt
=================================================
Primitive Expression DEFAULT
=================================================
select DEFAULT
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (primitive_expression
                          (default))))))))))))))

=================================================
Primitive Expression NULL
=================================================
select NULL
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (primitive_expression
                          (null_))))))))))))))


=================================================
Primitive Expression LOCAL
=================================================
select @foo
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (primitive_expression
                          (LOCAL_ID_))))))))))))))

=================================================
Primitive Expression Constant
=================================================
select 'foo'
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (primitive_expression
                          (primitive_constant
                            (string_lit)))))))))))))))
