test/corpus/query_specification.txt
=================================================
Query Specification Simple Where
=================================================
SELECT FOO FROM BAR WHERE BAZ = 5
---
(tsql_file
	(batch
		(sql_clauses
			(dml_clause
				(select_statement_standalone
					(select_statement
						(query_expression
							(query_specification
								(select)
								(select_list
									(select_list_elem
										(expression_elem
											(expression
												(full_column_name
													(id_))))))
								(table_sources
									(table_source
										(table_source_item
											(full_table_name
												(id_)))))
								(search_condition
									(predicate
										(expression
											(full_column_name
												(id_)))
										(comparrison_operator)
										(expression
											(primitive_expression
												(primitive_constant
													(decimal_))))))))))))))
