test/corpus/row_or_range_clause.txt
=================================================
Row or Range Clause ROWS
=================================================
SELECT RANK() OVER (ROWS UNBOUNDED PRECEDING)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (ranking_windowed_function
                            (rank_)
                            (over_clause
                              (row_or_range_clause
                                (window_frame_extent
                                  (window_frame_preceding))))))))))))))))))

=================================================
Row or Range Clause RANGE
=================================================
SELECT RANK() OVER (RANGE UNBOUNDED PRECEDING)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (ranking_windowed_function
                            (rank_)
                            (over_clause
                              (row_or_range_clause
                                (window_frame_extent
                                  (window_frame_preceding))))))))))))))))))
